Tue Oct 14 21:06:16 1997  Ezra Peisach  <epeisach@mit.edu>

	* server_stubs.c (CHANGEPW_SERVICE): Modify to free allocated
 	        memory in request.
		(setup_gss_names): Free memory in case of failure.
		(chrand_principal_1): Call free_server_handle for failure
		   cleanup.
	
	* ovsec_kadmd.c (main): Cleanup memory by calling acl_finish,
	 	gss_release_name, and krb5_free_context

Tue Jul  1 02:36:55 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_rpc_svc.c, server_stubs.c: Add support for setv4key.

Mon Mar 31 17:42:03 1997  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_svc.c, server_stubs.c: add support for setkey_principal

Tue Feb  4 20:59:31 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Wed Dec  4 15:29:30 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): fix duplicated error strings
 	[krb5-admin/234]

Tue Nov 19 16:48:50 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c: don't syslog \n's

Wed Nov 13 14:29:34 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (main): Note that krb5_defkeyname is an internal
	interface.

	* ovsec_kadmd.c (main): Revert kt_default_name changes.

Tue Nov 12 22:07:05 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (main): Use krb5_kt_set_default_name() rather than
	mucking about with global variables.

Fri Sep 27 16:37:47 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): krb5_klog_syslog doesn't understand %m

Tue Sep 10 14:18:12 1996  Tom Yu  <tlyu@mit.edu>

	* kadmind.M: remove ".so man1/header.doc", fix up .TH call

Tue Sep  3 22:11:25 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Fix typo: ($PROG) -> $(PROG)

Thu Aug 29 16:11:01 1996  Jeff Bigler  <jcb@viola.cygnus.com>

	* Makefile.in (install): added kadmind man page

Mon Aug 12 11:48:19 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): strip path components of whoami

Thu Aug  1 15:57:08 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>
